[package]
name = "anga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
nu-plugin = "0.84.0"
nu-protocol = { version = "0.84.0", features = ["plugin"] }
walkdir = "2.4.0"
